--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-prisma-orm-schema",
   "version": "1.0.0",
-  "description": "",
+  "description": "Nodejs Prisma ORM Schema and APIs",
   "main": "index.js",
   "scripts": {
     "postinstall": "tsc",
@@ -25,7 +25,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^2.29.1",
+    "@prisma/client": "^4.16.0-dev.74",
     "@types/swagger-ui-express": "^4.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -55,12 +55,12 @@
     "jest": "^27.1.0",
     "jest-mock-extended": "^2.0.4",
     "lint-staged": "^11.1.2",
+    "nodemon": "^2.0.22",
     "prettier": "2.4.0",
-    "prisma": "^2.29.1",
+    "prisma": "^4.16.0-dev.74",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.2",
-    "nodemon": "^2.0.22"
+    "typescript": "^4.4.2"
   },
   "lint-staged": {
     "*.ts": [
